<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:layout_margin="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/centerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/center_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Address"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/centerName"
                android:text="@string/Address"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"/>

        <TextView
                android:id="@+id/Dose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/Address"/>
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Date"
                android:gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/book"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bg_rounder"
                android:layout_alignParentEnd="true"
                android:padding="5dp" android:layout_marginEnd="5dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Book"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/book"
                android:layout_alignParentRight="true"
                android:layout_below="@id/Address"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bg_rounder"
                android:layout_alignParentEnd="true"
                android:padding="4dp"
                android:minHeight="0dp"
                android:textAllCaps="false"
                android:minWidth="75dp"
                android:layout_marginEnd="4dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>